# turbo-agent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  skills-lock.json  workflow.py
examples/: agent_demo.py  basics.py  claude_code_demo.py  conv_demo.py  llm_demo.py  prompt_demo.py  shell_demo.py
tests/: test_claude_stream.py  test_conversation.py  test_decorator.py  test_differential.py  test_engine.py  test_handlers.py  test_isolation.py  test_llm.py  test_shell_stream.py  test_store.py  test_tasks.py  test_user_prompt.py
web/: index.html  package-lock.json  package.json  server.py  vite.config.js
web/src/: App.jsx  index.css
wf-examples/: claude_code_demo.py  llm_demo.py  prompt_demo.py
wf-images/: game.Dockerfile  review.Dockerfile
wf-sivukhin/: daily_game.py
wf-turso/: review.py
workflows/: __init__.py  conversation.py  cost.py  decorator.py  engine.py  events.py  handlers.py  ids.py  loader.py  ops.py  store.py  tasks.py
workflows/event_handlers/: __init__.py  base.py  claude_stream.py  conversation.py  file.py  llm.py  shell.py  shell_stream.py  user_prompt.py
workflows/isolation/: __init__.py  base.py  docker.py  host.py
workflows/llm/: __init__.py  anthropic.py  base.py  openai.py
workflows/models/: __init__.py  context.py  conversation.py  events.py  handler_state.py  operations.py  state.py
workflows/operations/: __init__.py  base.py  conv_ops.py  event_handlers.py  file_ops.py  llm_op.py  shell_op.py  shell_stream_op.py  sleep_op.py  user_prompt_op.py  wait_op.py
