[project]
name = "turbo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "anthropic>=0.86.0",
    "bytecode>=0.17.0",
    "openai>=2.30.0",
    "pyturso>=0.5.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
